tests/base/parser/bad/stmts_t-accept-with.scilla
scilla_version 0

library TestLib

contract Test
()

(* this needs another semi-colon *)
transition arbitrary ()
accept
accept
end
